# the-first-try-

./: CMakeLists.txt  MyArray.hpp  ai.py  clion  clion.cpp  course  course.cpp  lab2.py  person.hpp  test.txt
